--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="page space-y-4">
       <h2 class="text-2xl font-semibold text-pink-700">🌸 Happpppppppppppppppppppppppppppy birthdaaaaaaaaaaaaaaaaaaaaaaaay 🦋</h2>
       <div class="rounded-xl overflow-hidden shadow-lg">
-        <video id="hiburan-video" src="0519(1).mp4" controls playsinline class="w-full h-64 object-cover rounded-lg"></video>
+        <video id="hiburan-video" src="hiburan.mp4" controls playsinline class="w-full h-64 object-cover rounded-lg"></video>
       </div>
       <button onclick="playWithSound()" class="bg-pink-600 text-white px-6 py-2 rounded-xl hover:bg-pink-700">▶ Putar Video dengan Suara</button>
       <p class="text-sm text-gray-700">hhhhhhhh lo lucu</p>
